--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
     "target": "ESNext",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -17,5 +20,7 @@
     "noEmit": true,
     "jsx": "preserve"
   },
-  "include": ["src/**/*.*"]
+  "include": [
+    "src/**/*.*"
+  ]
 }
