--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.15",
     "framer-motion": "^10.11.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "next": "^13.4.1",
+    "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -50,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
